--- a/web/layouts/painel-vagas/cabecalho.phtml
+++ b/web/layouts/painel-vagas/cabecalho.phtml
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mais1Code - Projeto</title>
+    <title><?=TITLE?></title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css"/>
-    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
+    <link href="/assets/css/google/fonts/familyInter.css" rel="stylesheet">
+    <link href="/assets/css/daisyui/4.12.10/full.css" rel="stylesheet" type="text/css"/>
+    <script src="/assets/js/tailwindcss/plugins/typography.js"></script>
     <script>
         tailwind.config = {
             theme: {
@@ -150,24 +150,24 @@
 </header>
 <main>
     <?php if (!isset($_GET['id'])): ?>
-        <div class="hero min-h-[calc(100vh-64px)] bg-no-repeat bg-[url('https://images.unsplash.com/photo-1521737711867-e3b97375f902?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D')]">
-            <div class="hero-overlay bg-opacity-70"></div>
-            <div class="hero-content text-neutral-content text-center">
-                <div class="max-w-xl">
-                    <h1 class="text-5xl font-quicksand font-bold">Encontre sua Vaga de Emprego</h1>
-                    <p class="py-6 text-lg">
-                        Confira gratuitamente as oportunidades de empregos nas empresas clientes da FoodFinder Jobs. Descubra oportunidades incríveis na indústria alimentícia.
-                    </p>
-                    <a class="btn btn-primary" href="#vagas">Explorar Vagas Agora</a>
-                </div>
+    <div class="hero min-h-[calc(50vh-64px)] bg-no-repeat bg-[url('/assets/images/photo-1521737711867-e3b97375f902.avif')]">
+        <div class="hero-overlay bg-opacity-70"></div>
+        <div class="hero-content text-neutral-content text-center">
+            <div class="max-w-xl">
+                <h1 class="text-5xl font-quicksand font-bold">Encontre sua<br>Vaga de Emprego</h1>
+                <p class="py-6 text-lg">
+                    Confira gratuitamente as oportunidades de empregos nos parceiros da FoodFinder Jobs.<br>Descubra oportunidades incríveis para acelerar sua carreira.
+                </p>
+                <a class="btn btn-primary" href="#vagas">Explorar Agora</a>
             </div>
         </div>
-        <div class="bg-primary text-primary-content py-10 lg:py-16">
-            <div class="flex flex-col lg:flex-row items-center justify-around max-w-screen-lg mx-auto px-4 gap-8">
-                <h2 class="text-3xl font-bold font-quicksand text-center">Crie seu perfil para buscar milhares de vagas</h2>
-                <div class="flex items-center">
-                    <a class="btn" href="#vagas">Explorar Vagas</a>
-                </div>
+    </div>
+    <div class="bg-primary text-primary-content py-8">
+        <div class="flex flex-col lg:flex-row items-center justify-around max-w-screen-lg mx-auto px-4 gap-8">
+            <h2 class="text-3xl font-bold font-quicksand text-center">Crie seu perfil para buscar milhares de vagas</h2>
+            <div class="flex items-center">
+                <a class="btn" href="/candidato/cadastrar">Quero me cadastrar!</a>
             </div>
         </div>
-    <?php endif; ?>
+    </div>
+<?php endif; ?>
