--- a/web/views/empresa/editar.phtml
+++ b/web/views/empresa/editar.phtml
@@ -29,7 +29,7 @@
         </div>
         <div class="row gy-3 gy-md-4 overflow-hidden mb-2">
             <div class="col-md-12 form-floating">
-                <input type="file" class="form-control" name="logo" id="logo" required>
+                <input type="file" class="form-control" name="logo" id="logo">
                 <label for="logo" class="form-label">Logo
                     <span class="text-danger">*</span></label>
             </div>
