Adicionado o link no menu do candidato logado, criado o NotificacoesController

--- a/web/layouts/sistema-candidato/cabecalho.phtml
+++ b/web/layouts/sistema-candidato/cabecalho.phtml
@@ -130,7 +130,7 @@
                 </li>
                 <li><a class="btn btn-ghost" href="/candidato/login">Painel de vagas</a></li>
                 <li><a class="btn btn-ghost" href="/candidato/listar">Minhas Vagas</a></li>
-
+                <li><a class="btn btn-ghost" href="/notificacoes/listar">Caixa de Notificaçoes</a></li>
 
                 <div class="dropdown dropdown-end">
                     <div tabindex="0" role="button" class="btn btn-ghost rounded-btn">Minha conta</div>
